@@ -4,5 +4,4 @@ Pygments==2.1.3
 pyPEG2==2.15.2
 PyYAML==3.11
 colorama==0.3.7
-colorlog==2.6.3
 cssutils==1.0.1
