@@ -319,7 +319,6 @@ class ImportFake:
     def __init__(self):
         self.exists = {
             'sip': True,
-            'colorlog': True,
             'colorama': True,
             'pypeg2': True,
             'jinja2': True,
@@ -383,15 +382,14 @@ class TestModuleVersions:
     @pytest.mark.usefixtures('import_fake')
     def test_all_present(self):
         """Test with all modules present in version 1.2.3."""
-        expected = ['sip: yes', 'colorlog: yes', 'colorama: 1.2.3',
-                    'pypeg2: 1.2.3', 'jinja2: 1.2.3', 'pygments: 1.2.3',
-                    'yaml: 1.2.3', 'cssutils: 1.2.3']
+        expected = ['sip: yes', 'colorama: 1.2.3', 'pypeg2: 1.2.3',
+                    'jinja2: 1.2.3', 'pygments: 1.2.3', 'yaml: 1.2.3',
+                    'cssutils: 1.2.3']
         assert version._module_versions() == expected
 
     @pytest.mark.parametrize('module, idx, expected', [
-        ('colorlog', 1, 'colorlog: no'),
-        ('colorama', 2, 'colorama: no'),
-        ('cssutils', 7, 'cssutils: no'),
+        ('colorama', 1, 'colorama: no'),
+        ('cssutils', 6, 'cssutils: no'),
     ])
     def test_missing_module(self, module, idx, expected, import_fake):
         """Test with a module missing.
@@ -405,15 +403,14 @@ class TestModuleVersions:
         assert version._module_versions()[idx] == expected
 
     @pytest.mark.parametrize('value, expected', [
-        ('VERSION', ['sip: yes', 'colorlog: yes', 'colorama: 1.2.3',
-                     'pypeg2: yes', 'jinja2: yes', 'pygments: yes',
-                     'yaml: yes', 'cssutils: yes']),
-        ('SIP_VERSION_STR', ['sip: 1.2.3', 'colorlog: yes', 'colorama: yes',
-                             'pypeg2: yes', 'jinja2: yes', 'pygments: yes',
-                             'yaml: yes', 'cssutils: yes']),
-        (None, ['sip: yes', 'colorlog: yes', 'colorama: yes', 'pypeg2: yes',
-                'jinja2: yes', 'pygments: yes', 'yaml: yes',
-                'cssutils: yes']),
+        ('VERSION', ['sip: yes', 'colorama: 1.2.3', 'pypeg2: yes',
+                     'jinja2: yes', 'pygments: yes', 'yaml: yes',
+                     'cssutils: yes']),
+        ('SIP_VERSION_STR', ['sip: 1.2.3', 'colorama: yes', 'pypeg2: yes',
+                             'jinja2: yes', 'pygments: yes', 'yaml: yes',
+                             'cssutils: yes']),
+        (None, ['sip: yes', 'colorama: yes', 'pypeg2: yes', 'jinja2: yes',
+                'pygments: yes', 'yaml: yes', 'cssutils: yes']),
     ])
     def test_version_attribute(self, value, expected, import_fake):
         """Test with a different version attribute.
@@ -429,7 +426,6 @@ class TestModuleVersions:
         assert version._module_versions() == expected
 
     @pytest.mark.parametrize('name, has_version', [
-        ('colorlog', False),
         ('sip', False),
         ('colorama', True),
         ('pypeg2', True),
@@ -442,7 +438,7 @@ class TestModuleVersions:
         """Check if all dependencies have an expected __version__ attribute.
 
         The aim of this test is to fail if modules suddenly don't have a
-        __version__ attribute anymore in a newer version, or colorlog has one.
+        __version__ attribute anymore in a newer version.
 
         Args:
             name: The name of the module to check.
